--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@types/angular": "^1.7.2",
     "@types/angular-mocks": "^1.7.0",
+    "@types/angular-resource": "^1.5.15",
     "@types/angular-route": "^1.7.1",
     "@types/jest": "^26.0.8",
     "angular": "^1.8.0",
