--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
   "files.exclude": {
-    "**/node_modules": true
+    // "**/node_modules": true
   },
   "search.exclude": {
-    "**/.*": true,
-    "**/node_modules": true
+    // "**/.*": true,
+    // "**/node_modules": true
   }
 }
