--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "angular-route": "^1.8.0",
     "angular-sanitize": "^1.8.0",
     "awesome-typescript-loader": "^5.2.1",
+    "bootstrap": "^4.5.2",
     "jest": "^26.2.2",
     "ts-jest": "^26.1.4",
     "ts-loader": "^8.0.2",
