--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "dependencies": {
     "@types/angular": "^1.7.2",
     "@types/angular-mocks": "^1.7.0",
+    "@types/angular-resource": "^1.5.15",
     "@types/angular-route": "^1.7.1",
     "@types/jest": "^26.0.8",
+    "@types/jquery": "^3.5.1",
     "angular": "^1.8.0",
     "angular-resource": "^1.8.0",
     "angular-route": "^1.8.0",
@@ -16,6 +18,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "bootstrap": "^4.5.2",
     "jest": "^26.2.2",
+    "jquery": "^3.5.1",
     "ts-jest": "^26.1.4",
     "ts-loader": "^8.0.2",
     "tslint": "^6.1.3",
