--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@types/angular-mocks": "^1.7.0",
     "@types/angular-resource": "^1.5.15",
     "@types/angular-route": "^1.7.1",
+    "@types/angular-ui-bootstrap": "^1.0.0",
     "@types/jest": "^26.0.8",
     "@types/jquery": "^3.5.1",
     "angular": "^1.8.0",
     "angular-resource": "^1.8.0",
     "angular-route": "^1.8.0",
     "angular-sanitize": "^1.8.0",
+    "angular-ui-bootstrap": "^2.5.6",
     "awesome-typescript-loader": "^5.2.1",
     "bootstrap": "^4.5.2",
     "jest": "^26.2.2",
